tests/functional/lang/eval-fail-bitAnd-1.err.exp
error:
       … while calling the 'bitAnd' builtin
         at /pwd/lang/eval-fail-bitAnd-1.nix:1:1:
            1| builtins.bitAnd 1.1 2
             | ^
            2|

       … while evaluating the first argument passed to builtins.bitAnd

       error: expected an integer but found a float: 1.1
